[package]
name = "tracing-unlikely"
version = "0.1.0"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "A wrapper around `tracing` that minimizes overhead when tracing is disabled."
edition = "2021"
rust-version = "1.78.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ibraheemdev/tracing"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
    "no-std",
]
keywords = ["logging", "tracing", "metrics", "async"]

[dependencies]
tracing = "0.1"
