[package]
name = "tracing-unlikely"
version = "0.1.1"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "A wrapper around `tracing` that minimizes overhead when tracing is disabled."
edition = "2021"
rust-version = "1.78.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ibraheemdev/tracing-unlikely"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
    "no-std",
]
keywords = ["logging", "tracing", "metrics", "async"]

[dependencies]
tracing = "0.1.44"

[features]
max_level_off   = ["tracing/max_level_off"]
max_level_error = ["tracing/max_level_error"]
max_level_warn  = ["tracing/max_level_warn"]
max_level_info  = ["tracing/max_level_info"]
max_level_debug = ["tracing/max_level_debug"]
max_level_trace = ["tracing/max_level_trace"]

release_max_level_off   = ["tracing/release_max_level_off"]
release_max_level_error = ["tracing/release_max_level_error"]
release_max_level_warn  = ["tracing/release_max_level_warn"]
release_max_level_info  = ["tracing/release_max_level_info"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

std = ["tracing/std"]
log = ["tracing/log"]
log-always = ["tracing/log-always"]
attributes = ["tracing/attributes"]
valuable = ["tracing/valuable"]
